--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,42 @@
 <resources>
-    <string name="app_name">GarbageHub_Application</string>
+    <string name="app_name">GarbageHub</string>
+    
+    <!-- Navigation -->
+    <string name="nav_map">Map</string>
+    <string name="nav_reports">Reports</string>
+    <string name="nav_settings">Settings</string>
+    <string name="nav_admin">Admin</string>
+    
+    <!-- Map Screen -->
+    <string name="report_issue">Report Issue</string>
+    <string name="bin_details">Bin Details</string>
+    
+    <!-- Report Screen -->
+    <string name="report_type">Report Type</string>
+    <string name="description">Description</string>
+    <string name="submit_report">Submit Report</string>
+    
+    <!-- Admin Dashboard -->
+    <string name="add_bin">Add Bin</string>
+    <string name="add_task">Add Task</string>
+    <string name="add_user">Add User</string>
+    <string name="search_users">Search Users</string>
+    
+    <!-- Bin Management -->
+    <string name="bin_id">Bin ID</string>
+    <string name="fill_level">Fill Level</string>
+    <string name="last_updated">Last Updated</string>
+    <string name="bin_status">Status</string>
+    
+    <!-- Maintenance -->
+    <string name="task_priority">Priority</string>
+    <string name="task_status">Status</string>
+    <string name="assigned_to">Assigned To</string>
+    <string name="due_date">Due Date</string>
+    
+    <!-- Common -->
+    <string name="save">Save</string>
+    <string name="cancel">Cancel</string>
+    <string name="delete">Delete</string>
+    <string name="edit">Edit</string>
 </resources>
